complete the chalange1

--- a/index.html
+++ b/index.html
@@ -5,8 +5,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alardo</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="responsive.css">
+
+    <script src="https://kit.fontawesome.com/daf44b3af6.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <heaer>
+        <div class="container">
+            <nav class="main-nav">
+                <div class="website-logo"><a href=""><img src="Assets/alarado-icon-homepage.svg" alt="Website Logo"></a></div>
+                <div class="menu">
+                    <ul>
+                        <li><a href="#">About us</a></li>
+                        <li><a href="#">Product</a></li>
+                        <li><a href="#">Resource</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="day-night-button">
+                    <img class="moon-fill-1" src="Assets/Moon_fill_light.svg" alt="">
+                    <img class="moon-fill-2" src="Assets/Moon_fill.svg" alt="">
+                    <img class="sun-fill" src="Assets/Sun_fill.svg" alt="">
+                </div>
+                <a class="resposive-menu" href="#"><i class="fa-solid fa-bars"></i></a>
+
+
+            </nav>
+        </div>
+    </heaer>
+
+    <main>
+        <div class="main-container container">
+            <div class="left-column">
+                <h4 class="left-column-subtitle">😎 Simple way to communicate</h4>
+                <h1 class="left-column-title">Actions for Accessibility in Design</h1>
+                <p class="left-column-description">The fastest way to build and deploy websites with resusable components.</p>
+                <div class="left-column-link">
+                    <a href="" class="button">GET STARTED</a>
+                    <a href="" class="live-demo">Get live demo</a>
+                </div>
+                <ul>
+                    <li>No credit card required</li>
+                    <li>No software to install</li>
+                </ul>
+            </div>
+            <div class="right-column">
+                <img src="Assets/hero-image-simple-homepage.png" alt="funny-coder-cartoon-picture">
+            </div>
+        </div>
+    </main>
     
 </body>
 </html>
